# 2025-final-command-team-37-backend

./: Dockerfile  docker-compose.yaml
src/api_service/: main.py  openapi.json  pyproject.toml
src/api_service/api/v1/: __init__.py
src/api_service/api/v1/routes/: booking.py  cdn.py  coworking.py  external.py  ping.py  stats.py  user.py  workplace.py
src/api_service/core/: build.py  config.py  exceptions.py  security.py  utils.py
src/api_service/domain/dto/: base.py  booking.py  cdn.py  coworking.py  misc.py  user.py  workplace.py
src/api_service/domain/gateway/: __init__.py  booking.py  coworking.py  stats.py  user.py  workplace.py
src/api_service/domain/interactors/: auth.py  booking.py  cdn.py  coworking.py  external.py  stats.py  user.py  workplace.py
src/api_service/infrastructure/database/postgres/: models.py  session.py
src/api_service/infrastructure/database/redis/: session.py  storage.py
src/api_service/infrastructure/database/repository/: __init__.py  booking.py  coworking.py  stats.py  user.py  workplace.py
src/api_service/infrastructure/ioc/: registry.py
src/api_service/infrastructure/ioc/providers/: __init__.py  auth.py  config.py  connect.py  interactor.py  repository.py
src/api_service/tests/: API Postman collection.json  conftest.py
src/api_service/tests/e2e/: test_01_ping.py  test_02_user.py  test_03_coworking.py  test_04_workplace.py  test_05_bookings.py
src/api_service/tests/e2e/components/booking/: add_booking_data.json  delete_booking_data.json  get_booking_data.json  (+2 more)
src/api_service/tests/unit/: test_base_dto.py  test_booking_dto.py  test_coworking_dto.py  test_user_dto.py  test_utils.py  test_workplace_dto.py
(+16 files in other folders)
